macro(switch_add_legacy_unit_test name)
  add_executable(${name} "${PROJECT_SOURCE_DIR}/tests/unit/${name}.cpp")
  target_link_libraries(${name} available-solvers)
  target_link_libraries(${name} smt-switch)
  add_test(NAME ${name}_test COMMAND ${name})
endmacro()

macro(switch_add_unit_test name)
  switch_add_legacy_unit_test(${name})
  target_link_libraries(${name} GTest::gtest_main)
endmacro()

# these tests don't use GoogleTest yet
# TODO move old tests to Google Test infrastructure
switch_add_legacy_unit_test(unit-exceptions)
switch_add_legacy_unit_test(unit-fun)

switch_add_unit_test(unit-arrays)
switch_add_unit_test(unit-incremental)
switch_add_unit_test(unit-op)
switch_add_unit_test(unit-printing)
switch_add_unit_test(unit-quantifiers)
switch_add_unit_test(unit-reset-assertions)
switch_add_unit_test(unit-solver-enums)
switch_add_unit_test(unit-solving-interface)
switch_add_unit_test(unit-sort)
switch_add_unit_test(unit-sort-inference)
switch_add_unit_test(unit-substitute)
switch_add_unit_test(unit-symbol)
switch_add_unit_test(unit-term)
switch_add_unit_test(unit-term-hashtable)
switch_add_unit_test(unit-term-id)
switch_add_unit_test(unit-termiter)
switch_add_unit_test(unit-transfer)
switch_add_unit_test(unit-util)
switch_add_unit_test(unit-walker)
